kubernetes/apps/media/bazarr/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bazarr-route-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bazarr
  oidc:
    provider:
      issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
    clientID: 5a89be8c-9525-4990-bebf-78d7875a9e01
    clientSecret:
      name: bazarr-secret
    redirectURL: https://bazarr.darkfellanetwork.com/oauth2/callback
    logoutPath: /logout
    cookieNames:
      accessToken: bazarr-access-token
      idToken: bazarr-id-token
  jwt:
    providers:
      - name: keycloak
        issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
        remoteJWKS:
          uri: https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - bazarr-access-token
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-by-group
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: groups
                values:
                  - media-admin
      - action: Allow
        name: allow-by-email
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: email
                values:
                  - georgi.panov@darkfellanetwork.com
